Added functionality to add/edit comments, show username when logged in

--- a/ddosdb/ddosdb/templates/ddosdb/header.html
+++ b/ddosdb/ddosdb/templates/ddosdb/header.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'ddosdb/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'ddosdb/css/fontawesome.css' %}">
     <link rel="stylesheet" href="{% static 'ddosdb/css/style.css' %}">
-    <link rel="icon" type="image/png" href="{% static 'ddosdb/img/favicon.png' %}"/>
+    <link rel="shortcut icon" href="{% static 'ddosdb/img/favicon.png' %}"/>
     <!--
     <script src="{% static 'ddosdb/js/jquery.js' %}"></script>
     <script src="{% static 'ddosdb/js/bootstrap.bundle.js' %}"></script>
