--- a/ddosdb/ddosdb/templates/ddosdb/menu.html
+++ b/ddosdb/ddosdb/templates/ddosdb/menu.html
@@ -1,21 +1,21 @@
 {% load static %}
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 box-shadow container mt-3">
-    <a class="mr-md-auto" href="{% url 'index' %}">
-        <img style="height: 40px" src="{% static "ddosdb/img/logo-new.svg" %}">
-    </a>
-    <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
-        <!--
-        <a class="p-2 text-dark" href="{% url 'index' %}">Blog</a>
-        -->
-        {% if not request.user.is_authenticated %}
-            <a class="p-2 text-dark" href="{% url 'login' %}">Log in</a>
-        {% else %}
-            <a class="p-2 text-dark" href="{% url 'account' %}">Account</a>
-            <a class="p-2 text-dark" href="{% url 'logout' %}">Log out</a>
-        {% endif %}
-    </nav>
+  <a class="mr-md-auto" href="{% url 'index' %}">
+    <img title="go to start page" style="height: 40px" src="{% static "ddosdb/img/logo-new.svg" %}">
+  </a>
+  <nav class="my-2 my-md-0 mr-md-3">
+    <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
+    <!--
+    <a class="p-2 text-dark" href="{% url 'index' %}">Blog</a>
+    -->
     {% if not request.user.is_authenticated %}
-        <a class="btn btn-secondary" href="{% url 'request-access' %}">Request access</a>
+      <a class="p-2 text-dark" href="{% url 'login' %}">Log in</a>
+    {% else %}
+      <a class="p-2 text-dark" href="{% url 'account' %}">Account</a>
+      <a class="p-2 text-dark" href="{% url 'logout' %}">Log out ({{ request.user.username }})</a>
     {% endif %}
+  </nav>
+  {% if not request.user.is_authenticated %}
+    <a class="btn btn-secondary" href="{% url 'request-access' %}">Request access</a>
+  {% endif %}
 </div>
