--- a/ddosdb/ddosdb/templates/ddosdb/overview.html
+++ b/ddosdb/ddosdb/templates/ddosdb/overview.html
@@ -12,7 +12,7 @@
 <body class="bg-light">
 {% include 'ddosdb/menu.html' %}
   {% if q != "" %}
-    <h1 align="center" class="display-4 ddosdb-subtitle">Overview of some fingerprints ({{ results|length }})</h1>
+    <h1 align="center" class="display-4 ddosdb-subtitle">Overview of some fingerprints ({{ results|length }}) - (<a href="{% url "overview" %}?q=&o={{ o }}&so={{ so }}&son={{ son }}">show all</a>)</h1>
   {% else %}
     <h1 align="center" class="display-4 ddosdb-subtitle">Overview of all fingerprints ({{ results|length }})</h1>
   {% endif %}
@@ -80,7 +80,7 @@
                 {% if user.is_authenticated %}
                   {% if user.username == node|get_item:"submitter"  or user.is_superuser %}
                   <span style="float:right;">
-                    &nbsp;(<a href="{% url "overview" %}">
+                    &nbsp;(<a href="{% url "edit-comment" %}?key={{node|get_item:"key"}}">
                       <img width="16" height="16" src="{% static "ddosdb/img/pencil.png" %}">
                     </a>)
                   </span>
