--- a/ddosdb/ddosdb/templates/ddosdb/query.html
+++ b/ddosdb/ddosdb/templates/ddosdb/query.html
@@ -16,7 +16,7 @@
         </form>
         <nav class="ml-md-auto my-2 my-md-0 mr-md-3 d-block text-nowrap">
             <a class="p-2 text-dark" href="{% url "account" %}">Account</a>
-            <a class="p-2 text-dark" href="{% url "logout" %}">Log out</a>
+            <a class="p-2 text-dark" href="{% url 'logout' %}">Log out ({{ request.user.username }})</a>
         </nav>
     </div>
 </div>
