Explicitly render IP's involved as integers

--- a/ddosdb/ddosdb/templates/ddosdb/overview.html
+++ b/ddosdb/ddosdb/templates/ddosdb/overview.html
@@ -70,6 +70,8 @@
                 {{node|get_item:hdr|precision:0|intcomma}}
             {% elif hdr == "avg_pps" %}
                 {{node|get_item:hdr|precision:0|intcomma}}
+            {% elif hdr == "ips_involved" %}
+                {{node|get_item:hdr|precision:0|intcomma}}
             {% elif hdr == "total_packets" %}
                 {{node|get_item:hdr|precision:0|intcomma}}
             {% elif hdr == "submit_timestamp" %}
