included query parameter in toggle-shared link

--- a/ddosdb/ddosdb/templates/ddosdb/overview.html
+++ b/ddosdb/ddosdb/templates/ddosdb/overview.html
@@ -65,11 +65,11 @@
                 </a>
               </div>
             {% elif hdr == "shareable" %}
-              <div title="click to show only fingerprints submitted by user '{{node|get_item:hdr}}'">
+              <div title="click to toggle shareable status">
                 {% if user.is_authenticated %}
                   {% if user.username == node|get_item:"submitter"  or user.is_superuser %}
                   <span style="float:right;">
-                    <a href="{% url "toggle-shareable" %}?key={{node|get_item:"key"}}&o={{ o }}&so={{ so }}&son={{ son }}">
+                    <a href="{% url "toggle-shareable" %}?q={{ q }}&key={{node|get_item:"key"}}&o={{ o }}&so={{ so }}&son={{ son }}">
                       {{node|get_item:hdr}}
                     </a>
                   </span>
