--- a/ddosdb/ddosdb/templates/ddosdb/overview.html
+++ b/ddosdb/ddosdb/templates/ddosdb/overview.html
@@ -17,23 +17,6 @@
     <h1 align="center" class="display-4 ddosdb-subtitle">Overview of all fingerprints ({{ results|length }})</h1>
   {% endif %}
 <div>
-  {% if remotedbs %}
-  <p align="center">Number of active remote DBs: {{ remotedbs|length }} <br/>
-    {% for node in remotedbs %}
-        {{node|get_item:'name'}} ({{node|get_item:'url'}})
-    {% endfor %}
-    <br/>
-      Fingerprints to upload: |
-      {% for node in results %}
-        {% if node|get_item:'shareable' == True %}
-          {{node|get_item:'key'}} |
-        {% endif %}
-      {% endfor %}
-    </p>
-    <
-  {% endif %}
-</div>
-<div>
   <table class="table-hover" id="overview-table" align="center">
     <thead>
       <tr>
@@ -52,7 +35,7 @@
             </a>
           {% if hdr == "submitter" and q != "" %}
             <a href="{% url "overview" %}?q=&o={{ o }}&so={{ so }}&son={{ son }}">
-              <img width="16" height="16" src="{% static "ddosdb/img/clear.png" %}">
+              <img width="16" height="16" src="{% static "ddosdb/img/red_cross.svg" %}">
             </a>
           {% endif %}
         </div>
@@ -85,11 +68,13 @@
               <div title="click to toggle shareable status">
                 {% if user.is_authenticated %}
                   {% if user.username == node|get_item:"submitter"  or user.is_superuser %}
-                  <span style="float:right;">
                     <a href="{% url "toggle-shareable" %}?q={{ q }}&key={{node|get_item:"key"}}&o={{ o }}&so={{ so }}&son={{ son }}">
-                      {{node|get_item:hdr}}
+                    {% if node|get_item:hdr == True %}
+                        <img align="middle" width="16" height="16" src="{% static "ddosdb/img/green_check.svg" %}">
+                    {% else %}
+                        <img align="middle" width="16" height="16" src="{% static "ddosdb/img/red_cross.svg" %}">
+                    {% endif %}
                     </a>
-                  </span>
                   {% else %}
                     {{node|get_item:hdr}}
                   {% endif %}
@@ -129,6 +114,32 @@
       {% endfor %}
     </tbody>
   </table>
+</div>
+
+<div>
+  {% if remotedbs %}
+  <br/>
+  <p align="center">{{ remotedbs|length }} remote DBs (
+    {% for node in remotedbs %}
+        {{node|get_item:'name'}},
+    {% endfor %}
+    ),
+      {{ syncfps }} Fingerprints to sync
+{% comment %}
+      {% for node in results %}
+        {% if node|get_item:'shareable' == True %}
+          {{node|get_item:'key'}} |
+        {% endif %}
+      {% endfor %}
+{% endcomment %}
+    <br/><br/>
+    <a class="btn btn-secondary" target="_blank" href="/admin/ddosdb/remoteddosdb/">Remote DBs</a>
+    {% if syncfps > 0 %}
+      &nbsp;<a class="btn btn-secondary" target="_blank" href="{% url "remote-sync" %}">Sync</a>
+    {% endif %}
+    </p>
+    <
+  {% endif %}
 </div>
 
 <div class="col-sm-12">
