--- a/ddosdb/ddosdb/templates/ddosdb/about.html
+++ b/ddosdb/ddosdb/templates/ddosdb/about.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+<title>DDoSDB - About</title>
 {% include 'ddosdb/header.html' %}
 <body class="bg-light">
 {% include 'ddosdb/menu.html' %}
