--- a/ddosdb/ddosdb/templates/ddosdb/overview.html
+++ b/ddosdb/ddosdb/templates/ddosdb/overview.html
@@ -8,6 +8,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+<title>DDosDB - Overview</title>
 {% include 'ddosdb/header.html' %}
 <body class="bg-light">
 {% include 'ddosdb/menu.html' %}
