First MongoDB version

--- a/ddosdb/ddosdb/templates/ddosdb/index.html
+++ b/ddosdb/ddosdb/templates/ddosdb/index.html
@@ -13,10 +13,12 @@
 
         <div class="container my-5" align="center">
             <a class="btn btn-lg btn-secondary" target="_blank" href="{% url "overview" %}">Overview</a>
-            &nbsp;&nbsp;&nbsp;&nbsp;
+
+          {% comment %}
             OR
             &nbsp;&nbsp;&nbsp;&nbsp;
             <a class="btn btn-lg btn-secondary" target="_blank" href="{% url "query" %}?q=*">Search</a>
+          {% endcomment %}
         </div>
 
           {% comment %}
