--- a/ddosdb/ddosdb/templates/ddosdb/query.html
+++ b/ddosdb/ddosdb/templates/ddosdb/query.html
@@ -4,7 +4,7 @@
 {% load humanize %}
 <!DOCTYPE html>
 <html lang="en">
-<title>DDoSDB - Detailed View</title>
+<title>DDoSDB - Query View</title>
 {% include "ddosdb/header.html" %}
 <body class="bg-light">
 <div class="pb-3 box-shadow pt-3 border-bottom bg-white">
