Changed img attributes that caused CSP violations

--- a/ddosdb/ddosdb/templates/ddosdb/footer.html
+++ b/ddosdb/ddosdb/templates/ddosdb/footer.html
@@ -1,17 +1,17 @@
 {% load static %}
 <footer class="my-5 pt-2 text-muted text-center text-small">
 {% comment %}
-  <img src="{% static "ddosdb/img/logo-sidnlabs.svg" %}" style="height: 64px">
+  <img src="{% static "ddosdb/img/logo-sidnlabs.svg" %}" height="64">
   &nbsp;&nbsp;&nbsp;&nbsp;
-  <img src="{% static "ddosdb/img/logo-SURF.svg" %}" style="height: 48px">
+  <img src="{% static "ddosdb/img/logo-SURF.svg" %}" height="48">
   &nbsp;&nbsp;&nbsp;&nbsp;
 {% endcomment %}
 
-  <img src="{% static "ddosdb/img/logo-CONCORDIA1.svg" %}" style="height: 64px">
+  <img src="{% static "ddosdb/img/logo-CONCORDIA1.svg" %}" height="64">
 
 {% comment %}
   &nbsp;&nbsp;
-  <img src="{% static "ddosdb/img/logo-ut.png" %}" style="height: 55px">
+  <img src="{% static "ddosdb/img/logo-ut.png" %}" style="height="55">
 {#    <p class="mb-1">© 2018 J.J.C. Santanna</p> #}
 {% endcomment %}
 
