--- a/ddosdb/ddosdb/templates/ddosdb/menu.html
+++ b/ddosdb/ddosdb/templates/ddosdb/menu.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 box-shadow container mt-3">
   <a class="mr-md-auto" href="{% url 'index' %}">
-    <img title="go to start page" style="height: 40px" src="{% static "ddosdb/img/logo-new.svg" %}">
+    <img title="go to start page" src="{% static "ddosdb/img/logo-new.svg" %}" height="40">
   </a>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
