Renewed search page

--- a/ddosdb/ddosdb/templates/ddosdb/index.html
+++ b/ddosdb/ddosdb/templates/ddosdb/index.html
@@ -13,12 +13,10 @@
 
         <div class="container my-5" align="center">
             <a class="btn btn-lg btn-secondary" target="_blank" href="{% url "overview" %}">Overview</a>
-
-          {% comment %}
+            &nbsp;&nbsp;&nbsp;&nbsp;
             OR
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="btn btn-lg btn-secondary" target="_blank" href="{% url "query" %}?q=*">Search</a>
-          {% endcomment %}
+            <a class="btn btn-lg btn-secondary" target="_blank" href="{% url "query" %}?q=">Search</a>
         </div>
 
           {% comment %}
